# src/routes/index.ts
@@ -2,11 +2,12 @@ import express from 'express';
 import {sessionRouter} from "./Sessions.routes";
 import usersRoutes from "./Users.routes";
 import postsRouter from "./Post.routes";
+import commentsRoutes from "./Comments.routes";
 
 const routes = express.Router();
 
 routes.use('/auth', sessionRouter);
 routes.use('/users', usersRoutes);
 routes.use('/posts', postsRouter);
-// routes.use('/comments', sessionRouter);
+routes.use('/comments', commentsRoutes);
 export default routes;
